--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,14 @@
             <version>42.5.4</version>
         </dependency>
         <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.2.0.CR3</version>
+            <version>5.5.7.Final</version>
         </dependency>
 
     </dependencies>
